--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@
 \includegraphics[width=4cm]{op02}
 %
 \section{personal information}
-25 years old, Brazilian
+26 years old, Brazilian
 %
 \section{contact}
 +55 31 9 8559 4248
@@ -68,7 +68,7 @@ I am an application/software developer and engineer graduated in Computer Scienc
   {\scalebox{.8}[1.0]{2018--Present}}
   {Unisys Corporation}
   {Nova Lima, MG, Brazil}
-  {\jobtitle{Application Developer and Engineer}\\
+  {\jobtitle{Associate Application Developer and Engineer}\\
   I am responsible for creating Web applications (operating more with backend) using REST Web services using microservices architecture. I am used to working with technologies such as Java2EE, Java 8, Spring Framework 4, Spring Boot, Hibernate, HTML5/CSS3, Javascript, Jquery, Oracle SQL, Git, Maven and more. I work done using agile principles of SCRUM and XP programming.}
   %------------------------------------------------
 \vspace{-0.3cm}
